// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing


exports[`versionadded component renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-weight: 400;
  margin-bottom: 16px;
  margin-top: 16px;
}

<div>
    <p
      class="emotion-0"
    >
      <em>
        New in version 1.0.0. 
      </em>
      : This is a new version.
    </p>
  </div>
</DocumentFragment>
`;

exports[`versionchanged component renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-weight: 400;
  margin-bottom: 16px;
  margin-top: 16px;
}

<div>
    <p
      class="emotion-0"
    >
      <em>
        Changed in version 2.0.0. 
      </em>
      : This is a changed version.
    </p>
  </div>
</DocumentFragment>
`;

exports[`deprecated component renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-weight: 400;
  margin-bottom: 16px;
  margin-top: 16px;
}

<div>
    <p
      class="emotion-0"
    >
      <em>
        Deprecated since version 3.0.0. 
      </em>
      : This is a deprecated version.
    </p>
  </div>
</DocumentFragment>
`;